--- a/src/components/Button/index.module.css
+++ b/src/components/Button/index.module.css
@@ -1,5 +1,5 @@
 .button {
-  /* ここにスタイルを定義 */
+  /* Task5-1 ここにスタイルを定義 */
 }
 
 .button:disabled {
@@ -9,7 +9,7 @@
 
 /* Variant styles */
 .primary {
-  /* ここにスタイルを定義 */
+  /* Task5-1 ここにスタイルを定義 */
 }
 
 .primary:hover:not(:disabled) {
@@ -17,7 +17,7 @@
 }
 
 .secondary {
-  /* ここにスタイルを定義 */
+  /* Task5-1 ここにスタイルを定義 */
 }
 
 .secondary:hover:not(:disabled) {
